--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
   color: white;
   border: none;
   font-size: 18px;
+  cursor: pointer;
 }
 @mixin tabs-buttons {
   --vwo-el-opacity: 0 !important;
@@ -27,6 +28,7 @@
   display: inline-flex;
   -webkit-box-align: end;
   align-items: flex-end;
+  cursor: pointer;
 }
 
 @mixin small-headers {
@@ -67,6 +69,44 @@
   line-height: 24px;
   margin-bottom: 27px;
 }
+@mixin footer-header {
+  --vwo-el-opacity: 0 !important;
+  --vwo-el-filter: alpha(opacity=0) !important;
+  --vwo-el-bg: none !important;
+  -webkit-text-size-adjust: none;
+  font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+    HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial,
+    Lucida Grande, sans-serif;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-direction: normal;
+  box-sizing: border-box;
+  color: #000;
+  font-weight: 700;
+  margin: 10px 0 20px;
+  font-size: 16px !important;
+  line-height: 1.65em !important;
+  text-align: left !important;
+}
+@mixin footer-list {
+  --vwo-el-opacity: 0 !important;
+  --vwo-el-filter: alpha(opacity=0) !important;
+  --vwo-el-bg: none !important;
+  line-height: 1.65em;
+  -webkit-text-size-adjust: none;
+  font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+    HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial,
+    Lucida Grande, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-box-direction: normal;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  color: #5b6a77;
+  cursor: pointer;
+}
 
 .wrap {
   padding: 45px 40px 60px 40px;
@@ -77,6 +117,7 @@
     border-top: 2px solid #ecf0f2;
   }
 }
+
 body {
   margin: 0 0 0 0;
 }
@@ -87,6 +128,7 @@ body {
   justify-content: center;
   position: fixed;
   z-index: 10;
+  cursor: pointer;
   .navbar-content {
     width: 1280px;
     display: flex;
@@ -96,6 +138,7 @@ body {
     .navbar-content__logo {
       width: 150px;
       height: 17px;
+      cursor: pointer;
     }
     .navbar-content-buttons__about {
       @include nav-buttons;
@@ -129,6 +172,7 @@ body {
         HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
         Arial, Lucida Grande, sans-serif;
       font-size: 18px;
+      cursor: pointer;
     }
   }
 }
@@ -207,6 +251,7 @@ body {
         width: 250px;
         font-size: 18px;
         margin-right: 30px;
+        cursor: pointer;
       }
       .header-content-right-form__start {
         font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
@@ -214,7 +259,7 @@ body {
           Arial, Lucida Grande, sans-serif;
         font-weight: 700;
         font-style: normal;
-
+        cursor: pointer;
         display: inline-flex;
         padding: 10px 20px;
         border: solid 3px #000;
@@ -249,6 +294,7 @@ body {
       display: flex;
       flex-direction: row;
       border-bottom: solid 3px #b1c1cb;
+      cursor: pointer;
       .tabs-content-line__marketers {
         width: calc(100% / 4);
         height: 60px;
@@ -443,6 +489,7 @@ body {
           text-decoration: underline;
           line-height: 1.8em;
           padding: 0;
+          cursor: pointer;
         }
       }
     }
@@ -476,6 +523,7 @@ body {
         height: 126.997px;
         align-self: flex-end;
         transform: translateX(30px);
+        cursor: pointer;
         .statistics-content-support-text__title {
           --vwo-el-opacity: 0 !important;
           --vwo-el-filter: alpha(opacity=0) !important;
@@ -536,6 +584,7 @@ body {
         height: 126.997px;
         align-self: flex-end;
         transform: translateX(30px);
+        cursor: pointer;
       }
       .statistics-content-uptime-text__title {
         --vwo-el-opacity: 0 !important;
@@ -588,6 +637,7 @@ body {
       position: relative;
       display: flex;
       z-index: -1;
+      cursor: pointer;
       .statistics-content-veiws-text {
         position: absolute;
         background-color: #fff;
@@ -596,6 +646,7 @@ body {
         height: 126.997px;
         align-self: flex-end;
         transform: translateX(30px);
+
         .statistics-content-veiws-text__title {
           --vwo-el-opacity: 0 !important;
           --vwo-el-filter: alpha(opacity=0) !important;
@@ -616,6 +667,7 @@ body {
           display: block;
           margin-bottom: 10px;
           line-height: 1em;
+          cursor: pointer;
         }
         .statistics-content-veiws-text__subtitle {
           --vwo-el-opacity: 0 !important;
@@ -731,6 +783,7 @@ body {
         font-style: normal;
         color: #1794c7;
         text-decoration: none;
+        cursor: pointer;
       }
     }
   }
@@ -776,6 +829,7 @@ body {
         color: #1794c7;
         text-decoration: none;
         margin-top: 50px;
+        cursor: pointer;
       }
       .autopilot-content-left__title {
         --vwo-el-opacity: 0 !important;
@@ -825,6 +879,7 @@ body {
       .autopilot-content-right__image {
         width: 100%;
         height: auto;
+        cursor: pointer;
       }
     }
   }
@@ -848,6 +903,7 @@ body {
       .way-content-left__img {
         width: 100%;
         height: auto;
+        cursor: pointer;
       }
     }
     .way-content-right {
@@ -919,6 +975,7 @@ body {
         color: #1794c7;
         text-decoration: none;
         margin-top: 0px;
+        cursor: pointer;
       }
     }
   }
@@ -996,6 +1053,7 @@ body {
         color: #1794c7;
         text-decoration: none;
         margin-top: 50px;
+        cursor: pointer;
       }
     }
     .benefits-content-cards {
@@ -1055,6 +1113,7 @@ body {
             color: #1794c7;
             transition: 0.2s all;
             text-decoration: none;
+            cursor: pointer;
           }
           .benefits-content-cards-one-bottom__subtitle {
             padding-left: 30px;
@@ -1133,6 +1192,7 @@ body {
             color: #1794c7;
             transition: 0.2s all;
             text-decoration: none;
+            cursor: pointer;
           }
           .benefits-content-cards-two-bottom__subtitle {
             padding-left: 30px;
@@ -1212,6 +1272,7 @@ body {
             color: #1794c7;
             transition: 0.2s all;
             text-decoration: none;
+            cursor: pointer;
           }
           .benefits-content-cards-three-bottom__subtitle {
             padding-left: 30px;
@@ -1373,7 +1434,7 @@ body {
       max-width: 100%;
       opacity: 0.7;
       filter: none;
-      height: 50%;
+      height: 65%;
     }
     .logos-content__button {
       --vwo-el-opacity: 0 !important;
@@ -1415,7 +1476,7 @@ body {
       text-align: center;
       box-sizing: border-box;
       border: 0;
-      height: 50%;
+      height: 65%;
       vertical-align: middle;
       transition: opacity 1s;
       max-width: 100%;
@@ -1432,7 +1493,7 @@ body {
       text-align: center;
       box-sizing: border-box;
       border: 0;
-      height: 50%;
+      height: 65%;
       vertical-align: middle;
       transition: opacity 1s;
       max-width: 100%;
@@ -1449,7 +1510,7 @@ body {
       text-align: center;
       box-sizing: border-box;
       border: 0;
-      height: 50%;
+      height: 65%;
       vertical-align: middle;
       transition: opacity 1s;
       max-width: 100%;
@@ -1519,6 +1580,7 @@ body {
         font-style: normal;
         color: #1794c7;
         text-decoration: none;
+        cursor: pointer;
       }
       .agency-content-left__img {
         width: 100%;
@@ -1577,6 +1639,7 @@ body {
       font-style: normal;
       color: #1794c7;
       text-decoration: none;
+      cursor: pointer;
     }
   }
 }
@@ -1626,6 +1689,7 @@ body {
         display: flex;
         flex-direction: column;
         height: 100%;
+        cursor: pointer;
         &:hover {
           transform: scale(1.1);
           -webkit-box-shadow: 0px 0px 17px 0px rgba(34, 60, 80, 0.2);
@@ -1684,6 +1748,7 @@ body {
         height: auto;
         display: flex;
         flex-direction: column;
+        cursor: pointer;
         &:hover {
           transform: scale(1.1);
           -webkit-box-shadow: 0px 0px 17px 0px rgba(34, 60, 80, 0.2);
@@ -1760,6 +1825,7 @@ body {
         height: auto;
         display: flex;
         flex-direction: column;
+        cursor: pointer;
         &:hover {
           transform: scale(1.1);
           -webkit-box-shadow: 0px 0px 17px 0px rgba(34, 60, 80, 0.2);
@@ -1850,6 +1916,366 @@ body {
       color: #000;
       text-decoration: none;
       font-weight: 700;
+      cursor: pointer;
+    }
+  }
+}
+
+.yellow {
+  width: 100%;
+  height: auto;
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+  .yellow-dark {
+    background-image: linear-gradient(90deg, #eecf1e 5%, #e1c211 50%);
+    width: 100%;
+    height: 444px;
+    position: absolute;
+    transform: skewY(7.125deg);
+  }
+  .yellow-light {
+    width: 100%;
+    height: 444px;
+    background-color: #eecf1e;
+    position: absolute;
+    transform: skewY(-7.125deg);
+  }
+  .yellow-content {
+    width: 100%;
+    height: 440px;
+    background-color: #eecf1e;
+    position: relative;
+    z-index: 1;
+    box-sizing: border-box;
+    transform: translateY(120px);
+    display: flex;
+    justify-content: center;
+    .yellow-content-info {
+      width: 1160px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transform: translateY(-100px);
+      .yellow-content-info__title {
+        --vwo-el-opacity: 0 !important;
+        --vwo-el-filter: alpha(opacity=0) !important;
+        --vwo-el-bg: none !important;
+        -webkit-text-size-adjust: none;
+        -webkit-font-smoothing: antialiased;
+        text-align: center;
+        box-sizing: border-box;
+        font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+          HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+          Arial, Lucida Grande, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: -0.3px;
+        line-height: 1.2;
+        color: #000;
+        font-size: 42px;
+        margin-bottom: 20px;
+      }
+      .yellow-content-info__subtitle {
+        --vwo-el-opacity: 0 !important;
+        --vwo-el-filter: alpha(opacity=0) !important;
+        --vwo-el-bg: none !important;
+        -webkit-text-size-adjust: none;
+        -webkit-font-smoothing: antialiased;
+        -webkit-box-direction: normal;
+        box-sizing: border-box;
+        font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+          HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+          Arial, Lucida Grande, sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        display: block;
+        line-height: 1.2;
+        color: black;
+        font-size: 20px;
+        display: flex;
+        justify-content: center;
+        margin-top: 0;
+      }
+      .yellow-content-info-form {
+        display: flex;
+        flex-direction: row;
+        width: 75%;
+        justify-content: center;
+        align-self: center;
+        height: 60px;
+        margin-top: 20px;
+        .yellow-content-info-form__email {
+          --vwo-el-opacity: 0 !important;
+          --vwo-el-filter: alpha(opacity=0) !important;
+          --vwo-el-bg: none !important;
+          -webkit-text-size-adjust: none;
+          -webkit-font-smoothing: antialiased;
+          box-sizing: border-box;
+          font: inherit;
+          margin: 0;
+          line-height: 1.6;
+          color: #78868e !important;
+          font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+            HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+            Arial, Lucida Grande, sans-serif;
+          font-weight: 400;
+          font-style: normal;
+          -webkit-box-flex: 1;
+          flex-grow: 1;
+          min-width: 0;
+          padding: 10px 20px !important;
+          height: auto;
+          border: 0;
+          appearance: none;
+          font-size: 20px;
+        }
+        .yellow-content-info-form__submit {
+          --vwo-el-opacity: 0 !important;
+          --vwo-el-filter: alpha(opacity=0) !important;
+          --vwo-el-bg: none !important;
+          -webkit-text-size-adjust: none;
+          -webkit-font-smoothing: antialiased;
+          box-sizing: border-box;
+          font: inherit;
+          margin: 0;
+          overflow: visible;
+          text-transform: none;
+          cursor: pointer;
+          font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+            HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+            Arial, Lucida Grande, sans-serif;
+          font-weight: 700;
+          font-style: normal;
+          padding: 0 30px;
+          border: 0;
+          background: #268ebc;
+          appearance: none;
+          color: #fff;
+          line-height: 1.2;
+          transition: 0.2s;
+          font-size: 20px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding-top: 200px;
+  .footer-content {
+    width: 1160px;
+    height: auto;
+    padding-left: 60px;
+    padding-right: 60px;
+    display: flex;
+    flex-direction: row;
+    .footer-content-about {
+      width: 180px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .footer-content-about__title {
+        @include footer-header();
+      }
+      .footer-content-about__company {
+        @include footer-list();
+      }
+      .footer-content-about-careers {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        .footer-content-about-careers__careers {
+          @include footer-list();
+        }
+        .footer-content-about-careers__hiring {
+          --vwo-el-opacity: 0 !important;
+          --vwo-el-filter: alpha(opacity=0) !important;
+          --vwo-el-bg: none !important;
+          line-height: 1.65em;
+          -webkit-text-size-adjust: none;
+          font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+            HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+            Arial, Lucida Grande, sans-serif;
+          font-weight: 400;
+          font-style: normal;
+          -webkit-font-smoothing: antialiased;
+          -webkit-box-direction: normal;
+          font-size: 16px;
+          box-sizing: border-box;
+          color: #fff;
+          background-color: #242090;
+          padding: 8px 10px;
+          border-radius: 8px;
+          margin-left: 10px;
+        }
+      }
+      .footer-content-about__leadership {
+        @include footer-list();
+      }
+      .footer-content-about__newsroom {
+        @include footer-list();
+      }
+    }
+    .footer-content-products {
+      width: 180px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .footer-content-products__title {
+        @include footer-header();
+      }
+      .footer-content-products__why {
+        @include footer-list();
+      }
+      .footer-content-products__solutions {
+        @include footer-list();
+      }
+      .footer-content-products__hosting {
+        @include footer-list();
+      }
+      .footer-content-products__plans {
+        @include footer-list();
+      }
+    }
+    .footer-content-partners {
+      width: 180px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .footer-content-partners__title {
+        @include footer-header();
+      }
+      .footer-content-partners__agency {
+        @include footer-list();
+      }
+      .footer-content-partners__google {
+        @include footer-list();
+      }
+      .footer-content-partners__reseller {
+        @include footer-list();
+      }
+      .footer-content-partners__new {
+        @include footer-list();
+      }
+    }
+    .footer-content-popular {
+      width: 180px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .footer-content-popular__title {
+        @include footer-header();
+      }
+      .footer-content-popular__new {
+        @include footer-list();
+      }
+      .footer-content-popular__events {
+        @include footer-list();
+      }
+      .footer-content-popular__status {
+        @include footer-list();
+      }
+      .footer-content-popular__demo {
+        @include footer-list();
+      }
+    }
+    .footer-content-connect {
+      width: 180px;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      .footer-content-connect__title {
+        @include footer-header();
+      }
+      .footer-content-connect__contact {
+        --vwo-el-opacity: 0 !important;
+        --vwo-el-filter: alpha(opacity=0) !important;
+        --vwo-el-bg: none !important;
+        line-height: 1.65em;
+        -webkit-text-size-adjust: none;
+        font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+          HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+          Arial, Lucida Grande, sans-serif;
+        font-style: normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-box-direction: normal;
+        font-size: 16px;
+        box-sizing: border-box;
+        background: 0 0;
+        transition: 0.2s all;
+        color: #242090;
+        text-decoration: none;
+        font-weight: 700;
+      }
+      .footer-content-connect__number {
+        --vwo-el-opacity: 0 !important;
+        --vwo-el-filter: alpha(opacity=0) !important;
+        --vwo-el-bg: none !important;
+        line-height: 1.65em;
+        -webkit-text-size-adjust: none;
+        font-family: Tablet Gothic, Frutiger, Frutiger Linotype, Univers,
+          HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica,
+          Arial, Lucida Grande, sans-serif;
+        font-style: normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-box-direction: normal;
+        font-size: 16px;
+        box-sizing: border-box;
+        background: 0 0;
+        transition: 0.2s all;
+        color: #242090;
+        text-decoration: none;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+.footer-content-wrap {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  .footer-content-info {
+    width: 1160px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-top: solid 1px #eef2f3;
+    .footer-content-info__copyright {
+      @include footer-list();
+      margin-bottom: 0px;
+    }
+    .footer-content-info__privacy {
+      @include footer-list();
+      margin-bottom: 0px;
+    }
+    .footer-content-info__data {
+      @include footer-list();
+      margin-bottom: 0px;
+    }
+    .footer-content-info__policy {
+      @include footer-list();
+      margin-bottom: 0px;
+    }
+    .footer-content-info__terms {
+      @include footer-list();
+      margin-bottom: 0px;
+    }
+    .footer-content-info__statement {
+      @include footer-list();
+      margin-right: 160px;
+      margin-bottom: 0px;
     }
   }
 }
